--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flask==2.0.1
+Flask>=2.0.0
 flask-cors==3.0.10
 pandas==1.3.3
 numpy==1.21.2
 scikit-learn==0.24.2
 joblib==1.1.0
 gunicorn==20.1.0
-Werkzeug==2.0.1
+Werkzeug>=2.0.0
