--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ flask-cors==3.0.10
 pandas==1.3.3
 numpy==1.21.2
 scikit-learn==1.3.1
-joblib==1.1.0
+joblib>=1.1.1
 gunicorn==20.1.0
 Werkzeug==2.0.1
